--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
         {
             "src": "/(.*)",
             "dest": "/public/$1"
+        },
+        {
+            "src": "/api/message/send",
+            "dest": "/api/message/send.js"
         }
     ]
 }
